--- a/settings.json
+++ b/settings.json
@@ -3,8 +3,8 @@
 "autoplaymusic": true,
 "autocomposing": true,
 "autorecording": false,
-"NamaBot":"Toxic-Alexa_V2",
-"NomorOwner":"916380260672",
-"NamaOwner":"Toxic-Turbo",
+"NamaBot":"Joker 1.0",
+"NomorOwner":"94722325000",
+"NamaOwner":"RGOST",
 "HunterApi":"Ikyy69"
 }
